add amount to cartResource
