# storage/api-docs/api-docs.json
@@ -72,6 +72,10 @@
                                                                                 "example": null,
                                                                                 "nullable": true
                                                                             },
+                                                                            "amount": {
+                                                                                "type": "integer",
+                                                                                "example": 25
+                                                                            },
                                                                             "price": {
                                                                                 "type": "number",
                                                                                 "format": "float",
